# Pansh

./: .gitignore  1.docx  LICENSE  README.md  pyproject.toml  settings.yaml  settings.yaml.bak
pancli/: core.py  main.py  models.py  network.py  settings.py  shell.py  transfer.py
src/pancli/: __init__.py  __main__.py  api.py  auth.py  config.py  core.py  main.py  models.py  network.py  progress.py  selectors.py  settings.py  shell.py  theme.py  transfer.py
src/pancli/defaults/: settings.yaml
src/pansh/: config.py  main.py  session.py  settings.py  shell.py  version.py
tests/: test_main.py  test_packaging.py  test_selectors.py  test_session.py  test_settings.py
