[project]
name = "pancli"
version = "3.0.0"
description = "AnyShare (Beihang Netdisk) 现代化 CLI 工具 — 异步并发 + Rich UI + Typer/Shell 混合架构"
readme = "README.md"
authors = [{ name = "LZR" }]
dependencies = [
    "httpx>=0.27.0",
    "platformdirs>=4.2.0",
    "prompt-toolkit>=3.0.43",
    "pydantic>=2.7.0",
    "rich>=13.7.1",
    "rsa>=4.9",
    "typer>=0.12.0",
    "pyyaml>=6.0",
]
requires-python = ">=3.10"

[project.scripts]
bhpan = "pancli.main:cli"
pancli = "pancli.main:cli"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
