[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "pancli"
dynamic = ["version"]
description = "AnyShare / 北航网盘 CLI with Typer, Rich and asyncio"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "LZR" }]
dependencies = [
  "httpx>=0.27.0",
  "platformdirs>=4.2.0",
  "prompt-toolkit>=3.0.43",
  "pydantic>=2.7.0",
  "pyyaml>=6.0",
  "rich>=13.7.1",
  "rsa>=4.9",
  "twine>=6.2.0",
  "typer>=0.12.0",
]

[project.optional-dependencies]
dev = [
  "build>=1.2.2",
  "mypy>=1.10.0",
  "pytest>=8.0.0",
  "ruff>=0.4.0",
]

[project.scripts]
pancli = "pancli.main:main"
bhpan = "pancli.main:main"

[tool.hatch.version]
path = "src/pancli/version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/pancli"]

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/tests",
  "/README.md",
  "/pyproject.toml",
  "/LICENSE",
]

[tool.pytest.ini_options]
norecursedirs = [
  ".venv",
  ".pytest_cache",
  ".pytest-tmp",
  ".tmp",
  ".tmp-settings",
  "dist",
  "build",
  "pytest-cache-files-*",
]
